# MM_LLM

./: .gitignore  README.md
MM/: CMakeLists.txt
MM/src/: main.cpp
MM/tests/: test_main.cpp
MM_Front/: README.md  index.html  package-lock.json  package.json
MM_Front/src/: App.css  App.jsx
